# cppcheckCmake

./: CMakeLists.txt  azure-pipeline.yml
.azurePipeline/: build.yml
.cmake/: cppcheck.cmake
